appId: com.danhvip2k4.mobileapp
---
- launchApp
- tapOn: "Activity"
- tapOn: "Gym, Indoor"
- tapOn: "Start"
- tapOn: "START"
- tapOn: "COMPLETE SET"
- tapOn: "SKIP REST"
- tapOn: "Finish Exercise"
- tapOn: "Arms"
- tapOn: "START"
- tapOn: "COMPLETE SET"
- tapOn: "SKIP REST"
- tapOn: "End Session"
- tapOn: "Back to Dashboard"
- assertVisible: "Activity" # Quay lại trang chính
